fixtures/errors/incomplete_fn/build/lib/index.js
function add(temp1, temp2) {
  const a = temp1;
  const b = temp2;
  return a + b;
}
const x = 5;
//# sourceMappingURL=./index.js.map
